--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT = 5000
 ACCESS_TOKEN_CODE = jsjjjdkkawiiirfhdioowoasllclxlodso
+dbname = vstack
+dbuser = root
+dbpass = ''
+dbhost = localhost
