--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "scripts": {
         "start": "node server/index.js",
-        "dev": "nodemon --trace-warnings server/index.js",
+        "dev": "nodemon server/index.js",
         "build": ""
     },
     "name": "vstack",
